--- a/index.html
+++ b/index.html
@@ -563,6 +563,30 @@ $(document).ready(function() {
             multipliersContainer.append(box);
         });
     }
+function ensureDocumentIsScrollable() {
+        const isScrollable = document.documentElement.scrollHeight > window.innerHeight;
+        if (!isScrollable) {
+            document.documentElement.style.setProperty("height", "calc(100vh + 1px)", "important");
+        }
+    }
+
+    window.addEventListener("load", ensureDocumentIsScrollable);
+    </script>
+
+    <!-- Prevent collapse on touch events -->
+    <script>
+    function preventCollapse(event) {
+        if (window.scrollY === 0) {
+            window.scrollTo(0, 1);
+        }
+    }
+
+    document.addEventListener("touchstart", preventCollapse);
+
+window.addEventListener("load", ensureDocumentIsScrollable);
+
+// Add event listener to the document or specific scrollable elements
+document.addEventListener("touchstart", preventCollapse);
 
     function updateMultiplierBoxes() {
         $('.multiplier-box').removeClass('current');
