--- a/index.html
+++ b/index.html
@@ -355,11 +355,16 @@
     color: white;
     border-radius: 5px;
     transition: background-color 0.3s;
-}
+}      .scrollable-element {
+        overflow-y: scroll;
+        height: 32rem;
+        font-size: 6.25rem;
+        border: 1px solid;
+      }
       </style>
 
   </head>
-<body>
+<body class="scrolable-element">
 
     <div class="grid-wrapper">
 
@@ -443,7 +448,27 @@ $(document).ready(function() {
         2.71, 3.13, 3.65, 4.31, 5.18, 6.33, 7.91, 10.17, 13.57,
         18.99, 28.49, 47.49, 94.99, 284.99
     ];
+    function ensureDocumentIsScrollable() {
+        const isScrollable =
+          document.documentElement.scrollHeight > window.innerHeight;
+        if (!isScrollable) {
+          document.documentElement.style.setProperty(
+            "height",
+            "calc(100vh + 1px)",
+            "important"
+          );
+        }
+      }
+      function preventCollapse() {
+        if (window.scrollY === 0) {
+          window.scrollTo(0, 1);
+        }
+      }
 
+      const scrollableElement = document.querySelector(".scrollable-element");
+      scrollableElement.addEventListener("touchstart", preventCollapse);
+
+      window.addEventListener("load", ensureDocumentIsScrollable);
     function createGrid() {
         gridContainer.empty(); // Clear the grid
         updateInfoBox();
@@ -563,30 +588,6 @@ $(document).ready(function() {
             multipliersContainer.append(box);
         });
     }
-function ensureDocumentIsScrollable() {
-        const isScrollable = document.documentElement.scrollHeight > window.innerHeight;
-        if (!isScrollable) {
-            document.documentElement.style.setProperty("height", "calc(100vh + 1px)", "important");
-        }
-    }
-
-    window.addEventListener("load", ensureDocumentIsScrollable);
-    </script>
-
-    <!-- Prevent collapse on touch events -->
-    <script>
-    function preventCollapse(event) {
-        if (window.scrollY === 0) {
-            window.scrollTo(0, 1);
-        }
-    }
-
-    document.addEventListener("touchstart", preventCollapse);
-
-window.addEventListener("load", ensureDocumentIsScrollable);
-
-// Add event listener to the document or specific scrollable elements
-document.addEventListener("touchstart", preventCollapse);
 
     function updateMultiplierBoxes() {
         $('.multiplier-box').removeClass('current');
