--- a/index.html
+++ b/index.html
@@ -361,8 +361,8 @@
       </style>
 
   </head>
-<body class="scrollable-element">
-
+<body>
+<div class="scrollable-element">
     <div class="grid-wrapper">
 
         <div class="info-container">
@@ -641,5 +641,8 @@ $(document).ready(function() {
 });
 
     </script>
+
+
+</div>
 </body>
 </html>
