--- a/index.html
+++ b/index.html
@@ -381,7 +381,43 @@
 
 
         </div>
+        <div class="grid-container">
+            <!-- Grid items will be dynamically generated -->
 
+
+        </div>        <div class="grid-container">
+            <!-- Grid items will be dynamically generated -->
+
+
+        </div>        <div class="grid-container">
+            <!-- Grid items will be dynamically generated -->
+
+
+        </div>        <div class="grid-container">
+            <!-- Grid items will be dynamically generated -->
+
+
+        </div>        <div class="grid-container">
+            <!-- Grid items will be dynamically generated -->
+
+
+        </div>        <div class="grid-container">
+            <!-- Grid items will be dynamically generated -->
+
+
+        </div>        <div class="grid-container">
+            <!-- Grid items will be dynamically generated -->
+
+
+        </div>        <div class="grid-container">
+            <!-- Grid items will be dynamically generated -->
+
+
+        </div>        <div class="grid-container">
+            <!-- Grid items will be dynamically generated -->
+
+
+        </div>
         <div class="multipliers-container">
           <div class="multipliers-inner">
   
