--- a/index.html
+++ b/index.html
@@ -357,6 +357,8 @@
     transition: background-color 0.3s;
 }      .scrollable-element {
         overflow-y: scroll;
+        width: 100%;
+
       }
       </style>
 
