--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
     
             function fetchAndDisplayProducts() {
                 $.ajax({
-                    url: 'http://localhost:3000/api/products', // Endpoint to fetch products
+                    url: 'https://site-45i5.onrender.com/api/products', // Endpoint to fetch products
                     method: 'GET',
                     success: function(data) {
                         // Clear existing products
