--- a/admin/about.html
+++ b/admin/about.html
@@ -144,7 +144,7 @@
 
             const formData = new FormData(this);
 
-            fetch('http://localhost:3000/submit-product', {
+            fetch('https://site-45i5.onrender.com/submit-product', {
                 method: 'POST',
                 body: formData
             })
@@ -177,7 +177,7 @@
 
             const searchIdentifier = document.getElementById('search-identifier').value;
 
-            fetch(`http://localhost:3000/product/${encodeURIComponent(searchIdentifier)}`, {
+            fetch(`https://site-45i5.onrender.com/product/${encodeURIComponent(searchIdentifier)}`, {
                 method: 'GET'
             })
             .then(response => {
@@ -203,7 +203,7 @@
                     `;
 
                     document.getElementById('delete-btn').addEventListener('click', function () {
-                        fetch(`http://localhost:3000/product/${encodeURIComponent(data.identifier)}`, {
+                        fetch(`https://site-45i5.onrender.com/product/${encodeURIComponent(data.identifier)}`, {
                             method: 'DELETE'
                         })
                         .then(response => {
