--- a/about.html
+++ b/about.html
@@ -10,13 +10,15 @@
 </head>
 <body>
     <nav class="navbar">
-        <div class="logo">420</div>
+        <div class="logo">
+            <img src="LOGOLAV.png" style="width: 40px;">
+        </div>
         <ul class="menu">
             <li><a href="index.html">Գլխավոր մենյու</a></li>
-            <li><a href="about.html">Մեր մասին            </a></li>
             <li><a href="services.html">Պատվերներ</a></li>
         </ul>
     </nav>
+
     <div class="about-content">
 
         <img class="about-content-img" src="https://img.freepik.com/premium-vector/kush-leaf-weed-simple-logo-illustrations_228886-462.jpg">
