--- a/services.html
+++ b/services.html
@@ -14,10 +14,11 @@
 </head>
 <body>
     <nav class="navbar">
-        <div class="logo">420</div>
+        <div class="logo">
+            <img src="LOGOLAV.png" style="width: 40px;">
+        </div>
         <ul class="menu">
             <li><a href="index.html">Գլխավոր մենյու</a></li>
-            <li><a href="about.html">Մեր մասին            </a></li>
             <li><a href="services.html">Պատվերներ</a></li>
         </ul>
     </nav>
